--- a/web_ui/src/index.html
+++ b/web_ui/src/index.html
@@ -1,17 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React Hello World</title>>
-     
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Movie Bookings</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+    }
+    .navbar {
+      background-color: #333;
+      overflow: hidden;
+    }
+    .navbar a {
+      float: left;
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 20px;
+      text-decoration: none;
+    }
+    .navbar a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+    .search-container {
+      float: left;
+    }
+    input[type=text] {
+      padding: 6px;
+      margin-top: 8px;
+      font-size: 17px;
+      border: none;
+    }
+    @media screen and (max-width: 600px) {
+      .navbar a {
+        float: none;
+        display: block;
+        text-align: left;
+      }
+      .search-container {
+        float: none;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div id="root"></div>
-    <div> <h1> Hello World </h1> </div>
-    <!-- React component -->
 
-    <script src="bundle.js"></script>
- 
+<div class="navbar">
+  <a href="#">Now Playing</a>
+  <a href="#">Coming Soon</a>
+  <div class="search-container">
+    <form action="/search">
+      <input type="text" placeholder="Search.." name="search">
+      <button type="submit">Search</button>
+    </form>
+  </div>
+  <a href="#">Login</a>
+</div>
+<div style="padding: 20px">
+  <h2>Content Area</h2>
+  <p>This is where your main content would go.</p>
+</div>
+
 </body>
 </html>
+
