--- a/web_ui/src/index.html
+++ b/web_ui/src/index.html
@@ -58,7 +58,7 @@
       <button type="submit">Search</button>
     </form>
   </div>
-  <a href="#">Login</a>
+  <a href="login.html">Login</a>
 </div>
 <div style="padding: 20px">
   <h2>Content Area</h2>
