--- a/web_ui/src/register.html
+++ b/web_ui/src/register.html
@@ -7,34 +7,64 @@
     <title>Login Page</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            color: #f4f4f4;
-            margin: 0;
+        * {
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            margin: 0;
+            box-sizing: border-box;
         }
 
-        .login-container {
-            background-color: #3d423e;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            width: 300px;
+        label {
+            font-family: "Raleway", sans-serif;
+            font-optical-sizing: auto;
+            font-weight: 400;
+            font-style: normal;
+            font-size: 14px;
+        }
+
+        body {
+            font-family: "Raleway", sans-serif;
+            font-size: 16px;
+            color: #fff;
+        }
+
+        h2 {
             text-align: center;
         }
 
-        .login-container label,
-        .login-container input {
-            display: block;
-            margin-bottom: 10px;
+        section {
+            min-height: 100vh;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #f4f4f4;
         }
 
-        .login-container input {
+        .container {
+            max-width: 400px;
+            width: 90%;
+            padding: 20px;
+            box-shadow: 0px 0px 20px #00000020;
+            border-radius: 8px;
+            background-color: #3d423e;
+        }
+
+        .step {
+            display: none;
+        }
+
+        .step.active {
+            display: block;
+        }
+
+        .form-group {
+            width: 100%;
+            margin-top: 20px;
+        }
+
+        .form-group input {
+            font-family: "Raleway", sans-serif;
+            margin-top: 5px;
             width: 100%;
             padding: 8px;
             box-sizing: border-box;
@@ -42,26 +72,34 @@
             border: solid 1px #f4f4f4;
         }
 
-        .login-container button {
-            background-color: #ec1212;
-            color: #fff;
-            padding: 10px;
+        button.next-btn,
+        button.previous-btn,
+        button.submit-btn {
+            float: right;
+            margin-top: 20px;
+            padding: 8px 20px;
             border: none;
-            border-radius: 4px;
+            outline: none;
+            background-color: #ec1212;
+            font-family: "Raleway", sans-serif;
             cursor: pointer;
-            width: 100%;
+            color: #fff;
+            border-radius: 5px;
+            ;
+            /* text-align: right; */
         }
 
-        #sign-up {
-            text-decoration: none;
+        button.previous-btn {
+            float: left;
         }
 
-        #sign-up:visited {
-            color: #f4f4f4;
+        button.submit-btn {
+            background-color: #ec1212;
         }
 
-        #sign-up:hover {
-            text-decoration: underline;
+        .password-container {
+            display: flex;
+            align-items: center;
         }
 
         .eye-icon {
@@ -70,46 +108,138 @@
             cursor: pointer;
             display: inline-block;
             margin-left: -26px;
-            margin-bottom: 3.5%;
-        }
-
-        .password-container {
-            display: flex;
-            align-items: center;
         }
     </style>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <div class="login-container">
-        <h2>Register</h2>
-        <form action="your_server_endpoint" method="post" id="myForm">
-            <input type="text" id="username" name="username" placeholder="Email" required>
+    <section>
+        <div class="container">
+            <h2>Welcome to WatchMovies!</h2>
+            <form id="myForm">
 
-            <div class="password-container">
-                <input type="password" id="password" name="password" placeholder="Password" required>
-            </div>
+                <div class="step step-1 active">
+                    <div class="form-group">
+                        <label for="email" class="header">ENTER YOUR EMAIL ADDRESS</label>
+                        <input type="text" id="email" name="email" placeholder="example@movies.com">
+                    </div>
+                    <button type="button" class="next-btn">Next</button>
+                </div>
 
-            <div class="password-container">
-                <input type="password" id="confirm-password" name="confirmPassword" placeholder="Confirm Password" required>
-            </div>
+                <div class="step step-2">
+                    <div class="form-group">
+                        <label for="firstName">FIRST NAME</label>
+                        <input type="text" id="firstName" name="first-name">
+                    </div>
+                    <div class="form-group">
+                        <label for="lastName">LAST NAME</label>
+                        <input type="text" id="lastName" name="last-name">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">PASSWORD</label>
+                        <div class="password-container">
+                            <input type="password" id="password" name="password" required>
+                            <i class="eye-icon bi bi-eye-slash" id="togglePassword"></i>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">CONFIRM PASSWORD</label>
+                        <div class="password-container">
+                            <input type="password" id="confirm--password" name="confirmPassword" required>
+                            <i class="eye-icon bi bi-eye-slash" id="togglePassword"></i>
+                        </div>
+                    </div>
+                    <button type="button" class="previous-btn">Back</button>
+                    <button type="button" class="next-btn">Next</button>
+                </div>
 
-            <br>
-            <button type="submit" onclick="return checkform()">Continue</button>
-            <br><br>
-        </form>
-    </div>
+                <div class="step step-3">
+                    <div class="form-group">
+                        <label for="country">country</label>
+                        <input type="text" id="country" name="country">
+                    </div>
+                    <div class="form-group">
+                        <label for="city">City</label>
+                        <input type="text" id="city" name="city">
+                    </div>
+                    <div class="form-group">
+                        <label for="postCode">Post Code</label>
+                        <input type="text" id="postCode" name="post-code">
+                    </div>
+                    <button type="button" class="previous-btn">Back</button>
+                    <button type="submit" class="submit-btn">Submit</button>
+                </div>
 
-    <script>
-        function checkform() {
-            var form = document.getElementById('myForm')
-            if (form.password.value != form.confirmPassword.value) {
-                alert("Passwords must be the same");
-                form.password.focus();
-                return false;
-            } else { return true; }
-        }
-    </script>
+            </form>
+        </div>
+        </div>
+
+        <script>
+            const steps = Array.from(document.querySelectorAll("form .step"));
+            const nextBtn = document.querySelectorAll("form .next-btn");
+            const prevBtn = document.querySelectorAll("form .previous-btn");
+            const form = document.querySelector("form");
+
+            nextBtn.forEach((button) => {
+                button.addEventListener("click", () => {
+                    changeStep("next");
+                });
+            });
+            prevBtn.forEach((button) => {
+                button.addEventListener("click", () => {
+                    changeStep("prev");
+                });
+            });
+
+            form.addEventListener("submit", (e) => {
+                e.preventDefault();
+                const inputs = [];
+                form.querySelectorAll("input").forEach((input) => {
+                    const { name, value } = input;
+                    inputs.push({ name, value });
+                });
+                console.log(inputs);
+                form.reset();
+            });
+
+            function changeStep(btn) {
+                let index = 0;
+                const active = document.querySelector(".active");
+                index = steps.indexOf(active);
+                steps[index].classList.remove("active");
+                if (btn === "next") {
+                    index++;
+                } else if (btn === "prev") {
+                    index--;
+                }
+                steps[index].classList.add("active");
+            }
+
+
+            function checkform() {
+                var form = document.getElementById('myForm')
+                if (form.password.value != form.confirmPassword.value) {
+                    alert("Passwords must be the same");
+                    form.password.focus();
+                    return false;
+                } else { return true; }
+            }
+
+            togglePassword.addEventListener('click', function (e) {
+                e
+                alert("working");
+                const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
+                password.setAttribute('type', type);
+                this.classList.toggle('bi-eye');
+            });
+        </script>
+    </section>
 </body>
 
 </html>
