--- a/web_ui/src/login.html
+++ b/web_ui/src/login.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: "Raleway", sans-serif;
             background-color: #f4f4f4;
             color: #f4f4f4;
             margin: 0;
@@ -35,6 +39,7 @@
         }
 
         .login-container input {
+            font-family: "Raleway", sans-serif;
             width: 100%;
             padding: 8px;
             box-sizing: border-box;
@@ -43,6 +48,7 @@
         }
 
         .login-container button {
+            font-family: "Raleway", sans-serif;
             background-color: #ec1212;
             color: #fff;
             padding: 10px;
@@ -70,7 +76,7 @@
             cursor: pointer;
             display: inline-block;
             margin-left: -26px;
-            margin-bottom: 3.5%;
+            margin-bottom: 5%;
         }
 
         .password-container {
