--- a/web_ui/src/register.html
+++ b/web_ui/src/register.html
@@ -161,15 +161,23 @@
 
                 <div class="step step-3">
                     <div class="form-group">
-                        <label for="country">country</label>
+                        <label for="country">Country</label>
                         <input type="text" id="country" name="country">
+                    </div>
+                    <div class="form-group">
+                        <label for="address">Address</label>
+                        <input type="text" id="address" name="address">
                     </div>
                     <div class="form-group">
                         <label for="city">City</label>
                         <input type="text" id="city" name="city">
                     </div>
                     <div class="form-group">
-                        <label for="postCode">Post Code</label>
+                        <label for="state">State</label>
+                        <input type="text" id="state" name="state">
+                    </div>
+                    <div class="form-group">
+                        <label for="postCode">Zip Code</label>
                         <input type="text" id="postCode" name="post-code">
                     </div>
                     <button type="button" class="previous-btn">Back</button>
@@ -233,7 +241,6 @@
 
             togglePassword.addEventListener('click', function (e) {
                 e
-                alert("working");
                 const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
                 password.setAttribute('type', type);
                 this.classList.toggle('bi-eye');
