--- a/web_ui/src/register.html
+++ b/web_ui/src/register.html
@@ -135,11 +135,11 @@
                 <div class="step step-2">
                     <div class="form-group">
                         <label for="firstName">FIRST NAME</label>
-                        <input type="text" id="firstName" name="first-name">
+                        <input type="text" id="firstName" name="first-name" placeholder="John">
                     </div>
                     <div class="form-group">
                         <label for="lastName">LAST NAME</label>
-                        <input type="text" id="lastName" name="last-name">
+                        <input type="text" id="lastName" name="last-name" placeholder="Smith">
                     </div>
                     <div class="form-group">
                         <label for="password">PASSWORD</label>
@@ -151,8 +151,8 @@
                     <div class="form-group">
                         <label for="password">CONFIRM PASSWORD</label>
                         <div class="password-container">
-                            <input type="password" id="confirm--password" name="confirmPassword" required>
-                            <i class="eye-icon bi bi-eye-slash" id="togglePassword"></i>
+                            <input type="password" id="confirm-password" name="confirmPassword" required>
+                            <i class="eye-icon bi bi-eye-slash" id="toggleConfirmPassword"></i>
                         </div>
                     </div>
                     <button type="button" class="previous-btn">Back</button>
@@ -186,67 +186,8 @@
 
             </form>
         </div>
-        </div>
-
-        <script>
-            const steps = Array.from(document.querySelectorAll("form .step"));
-            const nextBtn = document.querySelectorAll("form .next-btn");
-            const prevBtn = document.querySelectorAll("form .previous-btn");
-            const form = document.querySelector("form");
-
-            nextBtn.forEach((button) => {
-                button.addEventListener("click", () => {
-                    changeStep("next");
-                });
-            });
-            prevBtn.forEach((button) => {
-                button.addEventListener("click", () => {
-                    changeStep("prev");
-                });
-            });
-
-            form.addEventListener("submit", (e) => {
-                e.preventDefault();
-                const inputs = [];
-                form.querySelectorAll("input").forEach((input) => {
-                    const { name, value } = input;
-                    inputs.push({ name, value });
-                });
-                console.log(inputs);
-                form.reset();
-            });
-
-            function changeStep(btn) {
-                let index = 0;
-                const active = document.querySelector(".active");
-                index = steps.indexOf(active);
-                steps[index].classList.remove("active");
-                if (btn === "next") {
-                    index++;
-                } else if (btn === "prev") {
-                    index--;
-                }
-                steps[index].classList.add("active");
-            }
-
-
-            function checkform() {
-                var form = document.getElementById('myForm')
-                if (form.password.value != form.confirmPassword.value) {
-                    alert("Passwords must be the same");
-                    form.password.focus();
-                    return false;
-                } else { return true; }
-            }
-
-            togglePassword.addEventListener('click', function (e) {
-                e
-                const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
-                password.setAttribute('type', type);
-                this.classList.toggle('bi-eye');
-            });
-        </script>
     </section>
+    <script src="register.js"></script>
 </body>
 
 </html>
