--- a/web_ui/src/marley.html
+++ b/web_ui/src/marley.html
@@ -77,9 +77,35 @@
         }
 
         img {
-            margin-right:20px;
+            margin-right: 20px;
             border-radius: 8px;
         }
+
+        .description {
+            width: 50%;
+        }
+
+        .showtimes {
+            width: 100%;
+            height: 75%;
+            border-radius:8px;
+            padding: 8px;
+        }
+
+        .times button {
+            padding: 8px 20px;
+            font-size: 14px;
+            width:100px;
+            border: none;
+            outline: none;
+            background-color: #ec1212;
+            font-family: "Raleway", sans-serif;
+            cursor: pointer;
+            color: #fff;
+            border-radius: 20px;
+            margin-right: 10px;;
+        }
+
     </style>
 </head>
 
@@ -111,8 +137,14 @@
                 <p>BOB MARLEY: ONE LOVE celebrates the life and music of an icon who inspired generations through his
                     message of love and unity. On the big screen for the first time, discover Bob’s powerful story of
                     overcoming adversity and the journey behind his revolutionary music. </p>
+                <div class="showtimes">
+                    <h2>Today</h2>
+                    <div class="times">
+                        <button class="showtime">1:30</button>
+                        <button class="showtime">3:30</button>
+                    </div>
+                </div>
             </div>
-
         </div>
     </div>
 
