added coming soon section

--- a/web_ui/src/index.html
+++ b/web_ui/src/index.html
@@ -21,6 +21,8 @@
         }
 
         .navbar {
+            position:sticky;
+            top:0;
             display: flex;
             background-color: #333;
             align-items:center;
@@ -116,7 +118,7 @@
         </a>
     </div>
     <div style="padding: 20px">
-        <h2>Our Movies</h2>
+        <h2>Now Playing</h2>
         <hr>
         <br>
         <div class="movie-container">
@@ -148,6 +150,40 @@
                 <img src="images/dolls.jpg">
                 <p>1 HR 24 MIN | R</p>
                 <p>Released Feb 23, 2024</p>
+                <button type="button" class="tickets" id="dolls">GET TICKETS</button>
+            </div>
+        </div>
+        <h2>Coming Soon</h2>
+        <hr>
+        <br><br>
+        <div class="movie-container">
+            <div class="movie">
+                <a href="marley.html"><img src="images/imaginary.jpg"></a>
+                <p>1 HR 44 MIN | PG13</p>
+                <p>Opening Mar 8, 2024</p>
+                <button type="button" class="tickets" id="marley">GET TICKETS</button>
+            </div>
+            <div class="movie">
+                <img src="images/162471.webp">
+                <p>1 HR 49 MIN | R</p>
+                <p>Opening Mar 15, 2024</p>
+                <button type="button" class="tickets" id="slayer">GET TICKETS</button>
+            </div>
+            <div class="movie">
+                <img src="images/dune.webp">
+                <p>2 HR 46 MIN | PG13</p>
+                <p>Opening Mar 1, 2024</p>
+                <button type="button" class="tickets" id="wonka">GET TICKETS</button>
+            </div>
+            <div class="movie">
+                <img src="images/arthur.webp">
+                <p>1 HR 47 MIN | PG13</p>
+                <p>Opening Mar 15, 2024</p>
+                <button type="button" class="tickets" id="meangirls">GET TICKETS</button>
+            </div>
+            <div class="movie">
+                <img src="images/godzilla.webp">
+                <p>Opening Mar 29, 2024</p>
                 <button type="button" class="tickets" id="dolls">GET TICKETS</button>
             </div>
         </div>
