--- a/web_ui/src/marley.html
+++ b/web_ui/src/marley.html
@@ -79,6 +79,7 @@
         img {
             margin-right: 20px;
             border-radius: 8px;
+            height:50%;
         }
 
         .description {
@@ -87,15 +88,14 @@
 
         .showtimes {
             width: 100%;
-            height: 75%;
-            border-radius:8px;
+            border-radius: 8px;
             padding: 8px;
         }
 
         .times button {
             padding: 8px 20px;
             font-size: 14px;
-            width:100px;
+            width: 100px;
             border: none;
             outline: none;
             background-color: #ec1212;
@@ -103,9 +103,39 @@
             cursor: pointer;
             color: #fff;
             border-radius: 20px;
-            margin-right: 10px;;
+            margin-right: 10px;
+            ;
         }
 
+        .movie-hall {
+            font-family: "Raleway", sans-serif;
+            width:75%;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            text-align: center;
+        }
+
+        .seats-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        .seat {
+            width: 40px;
+            height: 40px;
+            margin: 5px;
+            background-color: #bdc3c7;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .seat.selected {
+            background-color: #27ae60;
+            color: #fff;
+        }
     </style>
 </head>
 
@@ -142,11 +172,56 @@
                     <div class="times">
                         <button class="showtime">1:30</button>
                         <button class="showtime">3:30</button>
+                        <button class="showtime">6:00</button>
+                    </div>
+                </div>
+                <br>
+                <div class="movie-hall">
+                    <h2>Select Your Seat</h2>
+                    <div class="seats-container" id="seatsContainer">
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const seatsContainer = document.getElementById('seatsContainer');
+            const rows = 5;
+            const seatsPerRow = 14;
+
+            function createSeat(row, seatNumber) {
+                const seat = document.createElement('div');
+                seat.classList.add('seat');
+                seat.dataset.row = row;
+                seat.dataset.seatNumber = seatNumber;
+                seat.innerText = `${String.fromCharCode(65 + row)}${seatNumber + 1}`; // Display seat label
+                return seat;
+            }
+
+            function generateSeats() {
+                for (let row = 0; row < rows; row++) {
+                    for (let seatNumber = 0; seatNumber < seatsPerRow; seatNumber++) {
+                        const seat = createSeat(row, seatNumber);
+                        seatsContainer.appendChild(seat);
+                    }
+                }
+            }
+
+            function handleSeatSelection(event) {
+                const selectedSeat = event.target;
+
+                if (selectedSeat.classList.contains('seat')) {
+                    selectedSeat.classList.toggle('selected');
+                }
+            }
+
+            seatsContainer.addEventListener('click', handleSeatSelection);
+
+            generateSeats();
+        });
+    </script>
 
 </body>
 
