--- a/web_ui/src/index.html
+++ b/web_ui/src/index.html
@@ -89,6 +89,7 @@
             cursor: pointer;
             color: #fff;
             border-radius: 20px;
+            text-decoration: none;
         }
 
         .material-symbols-outlined {
@@ -126,7 +127,7 @@
                 <a href="marley.html"><img src="images/marley.jpg"></a>
                 <p>1 HR 47 MIN | PG13</p>
                 <p>Released Feb 14, 2024</p>
-                <button type="button" class="tickets" id="marley">GET TICKETS</button>
+                <a href="marley.html" class="tickets" id="marley">GET TICKETS</a>
             </div>
             <div class="movie">
                 <img src="images/demon slayer.jpg">
